--- a/public/app.css
+++ b/public/app.css
@@ -7,3 +7,8 @@
     z-index: 1056;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+
+.cursor-pointer:hover{
+    cursor: pointer;
+    background-color: #eeeee4;
+}
